Bug 235089 - Fonts from prefs being ignored due to bad cast.  r=sfraser, sr=dbaron